order-view - print button fix style on mobile in inventory & others

--- a/src/app/shopping/order-view/order-view.component.css
+++ b/src/app/shopping/order-view/order-view.component.css
@@ -2,3 +2,8 @@
   direction: rtl;
   text-align: right;
 }
+@media print {
+  button {
+    display: none;
+  }
+}
